Fixing right whitespace issue (#29)

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -5,7 +5,7 @@
 }
 
 .icon-wrap {
-
+    width: 100vw;
     .icon {
         background: #262f38;
         cursor: pointer;
